--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
+    <script src="https://kit.fontawesome.com/7065d2bf4f.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="/assets/css/style.css" />
+
+    <title>Rosie</title>
 </head>
 <body>
-    <h1>Bootstrapping your next big idea</h1>
+    <header>
+
+    </header>
+    <section>
+
+    </section>
+    <footer>
+        
+    </footer>
 </body>
 </html>
