--- a/resume.html
+++ b/resume.html
@@ -37,38 +37,18 @@
           <div class="row no-gutters">
             <div class="col">
               <ul id="nav" class="list-inline menucontainer">
-                <li
-                  class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem"
-                >
-                  <a href="#" class="hvr-sweep-to-bottom"
-                    ><i class="fa fa-home" aria-hidden="true"></i
-                    ><span>Home</span></a
-                  >
-                </li>
-                <li
-                  class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem"
-                >
-                  <a href="#" class="hvr-sweep-to-bottom"
-                    ><i class="fa fa-graduation-cap" aria-hidden="true"></i
-                    ><span>Resume</span></a
-                  >
-                </li>
-                <li
-                  class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem"
-                >
-                  <a href="#" class="hvr-sweep-to-bottom"
-                    ><i class="fa fa-comment-o" aria-hidden="true"></i
-                    ><span>Contact</span></a
-                  >
-                </li>
-                <li
-                  class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem"
-                >
-                  <a href="#" class="hvr-sweep-to-bottom"
-                    ><i class="fa fa-download" aria-hidden="true"></i
-                    ><span>Download</span></a
-                  >
-                </li>
+                  <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
+                      <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                  </li>
+                  <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
+                      <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                  </li>
+                  <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
+                      <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
+                  </li>
+                  <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
+                      <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+                  </li>
               </ul>
             </div>
           </div>
@@ -85,20 +65,20 @@
           </div>
           <div class="history-items">
             <div class="timeline-item" data-dates="02/1998 - 04/2004">
-                <h4>National College of Art and Design (NCAD)</h4>
-                <p>Sculptor in Residence</p>
+              <h4>National College of Art and Design (NCAD)</h4>
+              <p>Sculptor in Residence</p>
             </div>
             <div class="timeline-item" data-dates="04.2004 - 06/2008">
-                <h4>Fisher and Diaz Funeral Directors</h4>
-                <p>Junioir Embalmer</p>
+              <h4>Fisher and Diaz Funeral Directors</h4>
+              <p>Junioir Embalmer</p>
             </div>
             <div class="timeline-item" data-dates="06-2008 - 06/2011">
-                <h4>Phantom Design Inc. Dublin</h4>
-                <p>Junior Front End Developer</p>
+              <h4>Phantom Design Inc. Dublin</h4>
+              <p>Junior Front End Developer</p>
             </div>
             <div class="timeline-item" data-dates="06/2011 - Present">
-                <h4>Hooli Inc. Silicon Valley</h4>
-                <p>Full Stack Developer</p>
+              <h4>Hooli Inc. Silicon Valley</h4>
+              <p>Full Stack Developer</p>
             </div>
           </div>
         </div>
